--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,3 @@
-# Importado en static-deploy.md
-# Este archivo se extrae como un archivo separado para que Renovate pueda actualizar las versiones de las acciones
-#
-#region contenido
 # Flujo de trabajo simple para desplegar contenido estático en GitHub Pages
 name: Desplegar contenido estático en Pages
 
@@ -34,26 +30,33 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Configurar Node
+        
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '18.x'
           cache: 'npm'
-      - name: Limpiar cache e instalar dependencias
-        run: |
-          rm -rf node_modules
-          rm -f package-lock.json
-          npm install
-      - name: Construir
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Build
         run: npm run build
-      - name: Configurar Pages
+        env:
+          NODE_ENV: production
+          
+      - name: Create .nojekyll file
+        run: touch ./dist/.nojekyll
+        
+      - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Subir artefacto
+        
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Subir la carpeta dist
+          # Upload the dist folder
           path: './dist'
-      - name: Desplegar a GitHub Pages
+          
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-#endregion contenido
