--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,7 @@
+# Importado en static-deploy.md
+# Este archivo se extrae como un archivo separado para que Renovate pueda actualizar las versiones de las acciones
+#
+#region contenido
 # Flujo de trabajo simple para desplegar contenido estático en GitHub Pages
 name: Desplegar contenido estático en Pages
 
@@ -30,33 +34,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
-      - name: Setup Node
+      - name: Configurar Node
         uses: actions/setup-node@v4
         with:
           node-version: '18.x'
           cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Build
+      - name: Limpiar cache e instalar dependencias
+        run: |
+          rm -rf node_modules
+          rm -f package-lock.json
+          npm install
+      - name: Construir
         run: npm run build
-        env:
-          NODE_ENV: production
-          
-      - name: Create .nojekyll file
-        run: touch ./dist/.nojekyll
-        
-      - name: Setup Pages
+      - name: Configurar Pages
         uses: actions/configure-pages@v5
-        
-      - name: Upload artifact
+      - name: Subir artefacto
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload the dist folder
+          # Subir la carpeta dist
           path: './dist'
-          
-      - name: Deploy to GitHub Pages
+      - name: Desplegar a GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+#endregion contenido
